--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,7 @@
   "name": "vv3-quasar-templ",
   "version": "1.0.0",
   "author": "Hossaini Hosain",
+  "type": "module",
   "scripts": {
     "build": "vite build",
     "dev": "vite",
@@ -10,16 +11,18 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.16.11",
+    "@quasar/vite-plugin": "^1.6.0",
     "@vitejs/plugin-vue": "^5.0.4",
+    "@vueuse/core": "^10.9.0",
     "axios": "^1.6.8",
     "pinia": "^2.1.7",
     "quasar": "^2.15.2",
     "vite": "^5.2.8",
+    "vite-plugin-pwa": "^0.19.7",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
   },
   "devDependencies": {
-    "@quasar/vite-plugin": "^1.6.0",
     "@rushstack/eslint-patch": "^1.10.1",
     "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
@@ -27,7 +30,6 @@
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-vue": "^9.24.0",
     "prettier": "^3.2.5",
-    "sass": "^1.74.1",
-    "vite-plugin-pwa": "^0.19.7"
+    "sass": "^1.74.1"
   }
 }
